<resources>
    <string name="app_name">Madarsoft</string>
    <string name="name">Enter your name</string>
    <string name="done">Save Data</string>
    <string name="get_data">Get Data</string>
    <string name="age">Enter your age</string>
    <string name="job_title">Enter your job title</string>
    <string name="gender">Select your gender</string>
    <string name="name_details">Name : </string>
    <string name="age_details">Age : </string>
    <string name="job_title_details">Job Title : </string>
    <string name="gender_details">Gender : </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="show_name">"Name : "</string>
    <string name="create_user">Create User</string>
</resources>